test/errors/subscript_array_with_non_int.luv
# RET: 1
# ERR: {self}:6:13:    print x["stuff"]
# ERR: {ssss}                  ^ error: Cannot subscript using type str.
def int main():
    x = [1,2,3]
    print x["stuff"]
